--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,17 +18,21 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_icons: ^1.1.0
-  glassmorphism_ui: ^0.1.0
-  persistent_bottom_nav_bar: ^4.0.2
+#  flutter_icons: ^1.1.0
+#  glassmorphism_ui: ^0.1.0
+#  persistent_bottom_nav_bar: "4.0.2"
   email_validator: ^2.0.1
   firebase_core:
+  bottom_navy_bar: ^6.0.0
+  google_sign_in: ^5.3.1
+  shared_preferences: ^2.0.15
+  firebase_database: ^9.0.14
 
 dev_dependencies:
   flutter_test:
@@ -55,17 +59,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: PizzaismyFAVORITE
+      fonts:
+        - asset: asset/fonts/PizzaismyFAVORITE.ttf
+    - family: Thin Pencil Handwriting
+      fonts:
+        - asset: asset/fonts/Thin Pencil Handwriting.ttf
+    - family: varela-round.regular
+      fonts:
+        - asset: asset/fonts/varela-round.regular.ttf
+    - family: Rounded_Elegance
+      fonts:
+        - asset: asset/fonts/Rounded_Elegance.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
